--- a/RickAndMorty/app/build.gradle
+++ b/RickAndMorty/app/build.gradle
@@ -42,8 +42,23 @@ def lifecycle_version = "2.4.0"
 def arch_version = "2.1.0"
 def room_version = "2.4.1"
 def nav_version = "2.3.5"
+def kotlin_coroutines_version = "1.6.0"
+def dagger_version = "2.40.5"
+def retrofit_version = "2.9.0"
+def http_logging_interceptor_version = "4.9.3"
+def glide_version = "4.12.0"
+
+def arc_core_testing_version = "2.1.0"
+def truth_testing_version = "1.1.3"
+def robolectric_testing_version = "4.7.3"
+def mockito_testing_version = "2.21.0"
+def mockito_inline_testing_version = "2.13.0"
+def junit_testing_version = "4.13.2"
+def junit_test_ext_version = "1.1.3"
+def espresso_testing_version = "3.4.0"
 
 dependencies {
+    // Standard library
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -51,24 +66,25 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     // Other Test Implementations (Normal Testing)
-    implementation 'androidx.test.ext:junit-ktx:1.1.3'
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation "com.google.truth:truth:1.1.3"
-    testImplementation "org.robolectric:robolectric:4.7.3"
-    testImplementation "org.mockito:mockito-core:2.21.0"
+    implementation "androidx.test.ext:junit-ktx:$junit_test_ext_version"
+    testImplementation "junit:junit:$junit_testing_version"
+    testImplementation "androidx.arch.core:core-testing:$arc_core_testing_version"
+    testImplementation "com.google.truth:truth:$truth_testing_version"
+    testImplementation "org.robolectric:robolectric:$robolectric_testing_version"
+    testImplementation "org.mockito:mockito-core:$mockito_testing_version"
+    testImplementation "androidx.arch.core:core-testing:$arch_version"
 
     // Using for data classes
-    testImplementation 'org.mockito:mockito-inline:2.13.0'
+    testImplementation "org.mockito:mockito-inline:$mockito_inline_testing_version"
 
     // Other Test Implementations (Android Testing)
-    androidTestImplementation "com.google.truth:truth:1.1.3"
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "com.google.truth:truth:$truth_testing_version"
+    androidTestImplementation "androidx.arch.core:core-testing:$arc_core_testing_version"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$kotlin_coroutines_version"
+    androidTestImplementation "androidx.test.ext:junit:$junit_test_ext_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_testing_version"
 
-    // Kotlin
+    // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
@@ -83,27 +99,29 @@ dependencies {
     // Annotation processor
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
-    // optional - Test helpers for LiveData
-    testImplementation "androidx.arch.core:core-testing:$arch_version"
-    testImplementation "com.google.truth:truth:1.1.3"
-
+    // Database library for android
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+    // Coroutine library for android and kotlin
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version"
 
-    implementation 'com.google.dagger:dagger:2.40.5'
-    kapt 'com.google.dagger:dagger-compiler:2.38.1'
+    // Dependency injection library
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // Network request post etc. library
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+    // Network logging library
+    implementation "com.squareup.okhttp3:logging-interceptor:$http_logging_interceptor_version"
 
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+    // Image library
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
 }
