--- a/RickAndMorty/app/build.gradle
+++ b/RickAndMorty/app/build.gradle
@@ -15,14 +15,15 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "BASE_URL", BASE_URL)
 
-        buildConfigField "String", "BASE_URL", "\"https://rickandmortyapi.com/api/\""
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
