--- a/RickAndMorty/app/build.gradle
+++ b/RickAndMorty/app/build.gradle
@@ -57,14 +57,15 @@ def mockito_inline_testing_version = "2.13.0"
 def junit_testing_version = "4.13.2"
 def junit_test_ext_version = "1.1.3"
 def espresso_testing_version = "3.4.0"
+def mock_web_server_version = "4.9.3"
 
 dependencies {
     // Standard library
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.core:core-ktx:1.7.0"
+    implementation "androidx.appcompat:appcompat:1.4.1"
+    implementation "com.google.android.material:material:1.5.0"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
 
     // Other Test Implementations (Normal Testing)
     implementation "androidx.test.ext:junit-ktx:$junit_test_ext_version"
@@ -74,6 +75,7 @@ dependencies {
     testImplementation "org.robolectric:robolectric:$robolectric_testing_version"
     testImplementation "org.mockito:mockito-core:$mockito_testing_version"
     testImplementation "androidx.arch.core:core-testing:$arch_version"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$mock_web_server_version"
 
     // Using for data classes
     testImplementation "org.mockito:mockito-inline:$mockito_inline_testing_version"
